# playground

./: CLAUDE.md  README.md  go.work  go.work.sum  pyproject.toml
.github/workflows/: k8s-validate.yaml  terraform.yaml
.moon/: tasks.yml  toolchain.yml  workspace.yml
apps/guardrail-server/: DEVELOPMENT.md  Dockerfile  docker-compose.yml  moon.yml  pyproject.toml
apps/guardrail-server-go/: DEVELOPMENT.md  Dockerfile  go.mod  go.sum  moon.yml
apps/guardrail-server/src/guardrail/: __init__.py  config.py  main.py
apps/guardrail-server/src/guardrail/api/: routes.py
apps/guardrail-server/src/guardrail/core/: circuit_breaker.py  orchestrator.py
apps/guardrail-server/src/guardrail/models/: client.py
apps/model-content-class/: Dockerfile  moon.yml  pyproject.toml
apps/model-content-class-go/: Dockerfile  go.mod  moon.yml
apps/model-hate-detect/: Dockerfile  moon.yml  pyproject.toml
apps/model-hate-detect-go/: Dockerfile  go.mod  moon.yml
apps/model-pii-detect/: Dockerfile  moon.yml  pyproject.toml
apps/model-pii-detect-go/: Dockerfile  go.mod  moon.yml
apps/model-pii-detect/src/model/: __init__.py  inference.py  main.py
apps/model-prompt-guard/: Dockerfile  moon.yml  pyproject.toml
apps/model-prompt-guard-go/: Dockerfile  go.mod  moon.yml
apps/model-prompt-guard/src/model/: __init__.py  inference.py  main.py
apps/url-shortener-go/: .env.example  Dockerfile  go.mod  go.sum  moon.yml
apps/url-shortener-go/migrations/: 001_init_schema.sql  README.md
apps/url-shortener-web/: .env.example  Dockerfile  middleware.ts  moon.yml  next.config.js  package.json  pnpm-lock.yaml
apps/url-shortener-web/app/: actions.ts  globals.css  layout.tsx  page.tsx
apps/url-shortener-web/components/: app-sidebar.tsx  dashboard-content.tsx
apps/url-shortener-web/lib/: api.ts  auth0.ts
docs/: README.md
docs/getting-started/: README.md  contour-guide.md  moon-guide.md
docs/projects/llm-guardrails-platform/: 00_OVERVIEW.md  01_DEVELOPER_JOURNEY.md  02_ARCHITECTURE.md  03_DATABASE.md  04_API_REFERENCE.md  05_DEPLOYMENT_AND_OPERATIONS.md  README.md
docs/projects/url-shortner/: architecture.mermaid  class-domain-model.mermaid  dataflow-analytics.mermaid  deployment.mermaid  er-diagram.mermaid  seq-analytics-dashboard.mermaid  seq-analytics-processing.mermaid  seq-authentication.mermaid  seq-qr-generation.mermaid  seq-redirect.mermaid  seq-url-creation.mermaid  seq-url-update.mermaid  (+1 more)
infra/: RUNBOOK.md
infra/terraform/: .gitignore  variables.tf  versions.tf
scripts/: build-and-push-go.sh  build-and-push.sh  chaos-kill-pods.sh  deploy.sh  oci-push-images.sh  registry-cleanup.sh  update-manifests.sh
tools/loadtest/: Dockerfile  README.md  client.go  go.mod  main.go  metrics.go  runner.go
(+136 files in other folders)
