[project]
name = "guardrails-platform"
version = "0.1.0"
description = "Multi-tenant LLM guardrails platform"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "apps/guardrail-server",
    "apps/model-prompt-guard",
    "apps/model-pii-detect",
    "apps/model-hate-detect",
    "apps/model-content-class",
    "packages/py-common"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
