[project]
name = "model-prompt-guard"
version = "0.1.0"
description = "Prompt injection detection model service (dummy implementation)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "prometheus-client>=0.19.0",
    "py-common",
]

[tool.uv.sources]
py-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model"]
